--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   <body>
     <div id="app"></div>
     <script src="/kakao.js" id="kakaoScript"></script>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/Main.ts"></script>
   </body>
 </html>
